--- a/scss/components/_cards.scss
+++ b/scss/components/_cards.scss
@@ -55,6 +55,10 @@
     }
     .lead {
       margin-bottom: 1rem;
+      font-weight: 300;
+      b {
+        font-weight: 600;
+      }
       @media (min-width: $desktop-bp) {
         align-self: flex-start;
       }
@@ -88,7 +92,7 @@
       background-color: $white-color;
       border: solid #000 1px;
       @media (min-width: $desktop-bp) {
-        top: -2rem;
+        top: -3rem;
         bottom: auto;
 
         &::after {
@@ -114,7 +118,7 @@
       span {
         margin-right: 1rem;
         font-weight: bold;
-        font-size: 1.5rem;
+        font-size: 2rem;
         color: $black-color;
       }
     }
